Use Java 9