@@ -105,24 +105,30 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
+                        <manifest>
+                            <mainClass>org.marid.Ide</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib</classpathPrefix>
+                        </manifest>
                         <manifestEntries>
-                            <JavaFX-Version>8.0</JavaFX-Version>
+                            <JavaFX-Version>9.0</JavaFX-Version>
+                            <Add-Opens>java.base/java.lang</Add-Opens>
                         </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
 
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.7.RELEASE</version>
+                <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>copy-lib</id>
                         <goals>
-                            <goal>repackage</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
+                        <phase>package</phase>
                         <configuration>
-                            <mainClass>org.marid.Ide</mainClass>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -134,28 +140,6 @@
                 <configuration>
                     <licenseName>apache_v2</licenseName>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-test-spring</id>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                            <goal>list</goal>
-                        </goals>
-                        <phase>process-test-classes</phase>
-                        <configuration>
-                            <skip>${skipTests}</skip>
-                            <outputDirectory>${project.build.testOutputDirectory}/jars</outputDirectory>
-                            <outputFile>${project.build.testOutputDirectory}/jars/jars.lst</outputFile>
-                            <includeScope>compile</includeScope>
-                            <stripClassifier>true</stripClassifier>
-                            <stripVersion>true</stripVersion>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
